<resources>
    <string name="app_name">SandBox</string>
    <string name="activity_one_title">Projects</string>

    <string name="store_content">Store content</string>

    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="add_button_description">Add store item to cart</string>
    <string name="remove_button_description">Back item form cart to store</string>
    <string name="cart_button_description">Go to database activity</string>
    <string name="input_information">Input information</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_date">Product date</string>

    <string name="date">Date</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>


    <string name="toast_fill_empty_field">Fill empty field(s)</string>
    <string name="toast_entry_added_successfully">Entry added successfully</string>
    <string name="toast_already_added_in_list">Item has already added in the list</string>
    <string name="toast_unhandled_item">Unhandled item</string>


    <string name="drawer_has_opened">Drawer has opened</string>
    <string name="drawer_has_closed">Drawer has closed</string>

    <string name="web_store">Web Store</string>
    <string name="options">Options</string>
    <string name="main_page">Main Page</string>
    <string name="help">Help</string>
    <string name="open_source">Open Source</string>

    <string name="database_admin">Database admin</string>
    <string name="cart">Cart</string>
    <string name="exit">Exit</string>
    <string name="delete_entry">Delete entry</string>
    <string name="add_entry">Add entry</string>
    <string name="clear_database">Clear database</string>

    <string name="warning">Warning!</string>
    <string name="clear_warning_message">Are you sure that you want to clear database?</string>

    <string name="chat">Chat</string>

    <string name="unknown_status">Unknown status</string>
    <string name="connected_status">Connected to server</string>
    <string name="error_status">Error status</string>
    <string name="server_address">Server address:</string>
    <string name="default_server_address">http://192.168.0.107:8000/serverapp</string>
    <string name="author">Author:</string>
    <string name="message">Message:</string>
    <string name="connect">Connect</string>


    <string name="contacts">Contacts</string>










</resources>
